Add docker support, Upgrade Gradle and Java to 13